--- a/app/page.module.css
+++ b/app/page.module.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 80px;
+  gap: 14px;
 }
 
 .svg {
@@ -25,4 +25,11 @@
 
 .radioInput {
   margin-right: 8px;
+}
+
+.voices {
+  padding-left: 38px;
+  display: flex;
+  gap: 170px;
+  width: 1202px;
 }
