--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,30 +1,30 @@
 .page {
-  padding: 80px;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 18px;
+  position: relative;
+  padding: 60px;
 }
 
-.svg {
-  width: var(--svg-width);
-  height: var(--svg-height);
-}
-
-.controls {
+.header {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  gap: 28px;
+  justify-content: space-between;
+  padding: 10px;
+  gap: 20px;
+  width: 100%;
 }
 
-.control {
+.headerLeft {
   display: flex;
-  gap: 16px;
+  align-items: center;
+  gap: 10px;
 }
 
-.radioInput {
-  margin-right: 8px;
+.playStopButton {
+  cursor: pointer;
+  pointer-events: all;
 }
 
 .voices {
@@ -32,4 +32,12 @@
   display: flex;
   gap: 170px;
   width: 1202px;
+}
+
+.infoLayer {
+  position: absolute;
+  inset: 0;
+  background-color: transparent;
+  pointer-events: none;
+  opacity: 0.75;
 }
