--- a/app/page.module.css
+++ b/app/page.module.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 18px;
   position: relative;
   padding: 60px;
 }
@@ -28,10 +27,11 @@
 }
 
 .voices {
-  padding-left: 38px;
+  margin-top: -46px;
+  padding-left: 24px;
   display: flex;
-  gap: 170px;
-  width: 1202px;
+  gap: 122px;
+  width: 961.6px;
 }
 
 .infoLayer {
@@ -46,10 +46,10 @@
   position: absolute;
   display: flex;
   flex-direction: column;
-  top: 156px;
-  left: 40px;
-  gap: 172px;
-  width: 480px;
+  top: 160px;
+  left: 174px;
+  gap: 124px;
+  width: 434px;
 }
 
 .lfoControl {
