--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,5 @@
 body {
   background: #000;
-  font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -14,4 +13,14 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.react-switch-handle {
+  background: #000 !important;
+  border: 2px solid #ff0000 !important;
+}
+
+.react-switch-bg {
+  background: #000 !important;
+  border: 1.7px solid #4d4d4d !important;
 }
