--- a/app/page.module.css
+++ b/app/page.module.css
@@ -46,15 +46,21 @@
   position: absolute;
   display: flex;
   flex-direction: column;
-  top: 160px;
+  top: 170px;
   left: 174px;
-  gap: 124px;
-  width: 434px;
+  gap: 60px;
+  width: 424px;
 }
 
 .lfoControl {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  opacity: 0;
   transition: opacity 0.3s ease-in-out;
+}
+
+.lfoControl.active {
+  opacity: 1;
+  pointer-events: all;
 }
