--- a/components/LFOControls/index.module.css
+++ b/components/LFOControls/index.module.css
@@ -1,7 +1,6 @@
 .lfoControls {
   display: flex;
   align-items: center;
-  gap: 2px;
   color: var(--secondary-color);
 }
 
@@ -9,15 +8,19 @@
   display: flex;
   align-items: center;
   gap: 6px;
-  font-size: 30px;
+  font-size: 28px;
   transform: scale(0.65);
+}
+
+.lfoControl p {
+  margin-top: -4px;
 }
 
 .shapeControl {
   display: flex;
   align-items: center;
   gap: 8px;
-  margin-top: -5px;
+  margin-top: -4px;
 }
 
 .shapeControl polygon,
