--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,7 @@ body {
   background: #000;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 18px;
 }
 
 * {
