--- a/app/page.module.css
+++ b/app/page.module.css
@@ -124,8 +124,51 @@
   transform: translateY(-50%);
 }
 
-.sequencerContainer {
+.modulationContainer {
   position: absolute;
   left: 64%;
   top: 20%;
+}
+
+.auxLfoContainer {
+  display: flex;
+  margin-left: 120px;
+}
+
+.auxLfoFreq {
+  margin-top: -2px;
+}
+
+.auxLfoControl {
+  transform: scale(0.65) translateY(-39%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: -2px;
+}
+
+.shapeControl {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-top: -14px;
+  margin-left: 162px;
+}
+
+.auxLfoIndicator {
+  width: 18px;
+  height: 18px;
+  border-radius: 18px;
+  border: 1px solid var(--secondary-color);
+  margin-top: 5px;
+  margin-left: 2px;
+}
+
+.horizontalDivider {
+  width: 158px;
+  height: 1px;
+  background-color: var(--secondary-color);
+  margin-top: -16px;
+  margin-bottom: 26px;
+  margin-left: 101px;
 }
