--- a/app/page.module.css
+++ b/app/page.module.css
@@ -168,9 +168,20 @@
   width: 160px;
   height: 1px;
   background-color: var(--secondary-color);
-  margin-top: -18px;
   margin-bottom: 26px;
   margin-left: 101px;
+}
+
+.modOff {
+  display: inline-block;
+  margin-left: 212px;
+  font-size: 13px;
+  text-align: center;
+}
+
+.modOffToggle {
+  cursor: pointer;
+  margin-top: 16px;
 }
 
 .modMatrixLabel {
@@ -179,4 +190,8 @@
   top: 184px;
   font-size: 16px;
   color: var(--secondary-color);
+}
+
+.bypassed {
+  opacity: 0.4 !important;
 }
