--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,10 +1,9 @@
 .page {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   position: relative;
-  padding: 60px;
   color: var(--secondary-color);
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .header {
@@ -13,7 +12,6 @@
   justify-content: space-between;
   padding: 10px;
   gap: 20px;
-  width: 100%;
 }
 
 .headerLeft {
@@ -57,6 +55,8 @@
 .infoBody {
   opacity: 0;
   transition: opacity 0.5s step-end;
+  width: 100%;
+  height: 100%;
 }
 
 .infoBody.playing {
@@ -83,10 +83,10 @@
 .voiceAux {
   position: absolute;
   top: 776px;
-  width: 100%;
+  left: 50%;
+  transform: translateX(-50%);
   display: flex;
   align-items: center;
-  justify-content: center;
   gap: 87px;
 }
 
@@ -132,7 +132,7 @@
 .modulationContainer {
   position: absolute;
   left: 64.2%;
-  top: 20%;
+  top: 17.3%;
 }
 
 .auxLfoContainer {
