--- a/app/page.module.css
+++ b/app/page.module.css
@@ -74,10 +74,24 @@
   width: 424px;
 }
 
+.lfoControlContainer {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .lfoControl {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  margin-left: -14px;
+}
+
+.lfoControlHeader {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  gap: 17px;
 }
 
 .voiceAux {
@@ -132,7 +146,7 @@
 .modulationContainer {
   position: absolute;
   left: 64.3%;
-  top: 17.3%;
+  top: 17.7%;
 }
 
 .auxLfoContainer {
@@ -192,11 +206,11 @@
 .modMatrixLabel {
   position: absolute;
   left: 450px;
-  top: 184px;
+  top: 180px;
   font-size: 16px;
   color: var(--secondary-color);
 }
 
 .bypassed {
-  opacity: 0.5 !important;
+  opacity: 0.4 !important;
 }
