--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,3 +1,7 @@
+:root {
+  --transition-time: 0.25s;
+}
+
 .page {
   position: relative;
   color: var(--secondary-color);
@@ -25,6 +29,18 @@
 
 .containerGraphic {
   filter: blur(2px);
+  opacity: 0;
+  transition: opacity var(--transition-time) ease-in-out;
+}
+
+.bgClip {
+  transform-origin: center;
+  transform: scale(0.8);
+  transition: transform 0.2s ease-in-out;
+}
+
+.bgClip.active {
+  transform: scale(1);
 }
 
 .header {
@@ -54,7 +70,12 @@
   width: 961.6px;
   pointer-events: none;
   opacity: 0;
-  transition: opacity 0.2s ease-in-out;
+  transform: translateY(-20%);
+  transition: opacity var(--transition-time) ease-in-out, transform var(--transition-time) ease-in-out;
+}
+
+.voices.active {
+  transform: translateY(0);
 }
 
 .voiceContainer {
@@ -71,20 +92,11 @@
   pointer-events: none;
 }
 
-.active {
-  pointer-events: all;
-}
-
 .infoBody {
   opacity: 0;
-  transition: opacity 0.5s step-end;
+  transition: opacity var(--transition-time) ease-in-out;
   width: 100%;
   height: 100%;
-}
-
-.playing {
-  opacity: 1;
-  transition: opacity 0.2s ease-in-out;
 }
 
 .lfoControls {
@@ -100,6 +112,13 @@
 .lfoControlContainer {
   display: flex;
   justify-content: flex-end;
+  opacity: 0;
+  transform: translateX(50%);
+  transition: opacity var(--transition-time) ease-in-out, transform var(--transition-time) ease-in-out;
+}
+
+.lfoControlContainer.active {
+  transform: translateX(0);
 }
 
 .lfoControl {
@@ -121,10 +140,16 @@
   position: absolute;
   top: 776px;
   left: 50%;
-  transform: translateX(-50%);
   display: flex;
   align-items: center;
   gap: 87px;
+  opacity: 0;
+  transform: translate(-50%, -50%);
+  transition: opacity var(--transition-time) ease-in-out, transform var(--transition-time) ease-in-out;
+}
+
+.voiceAux.active {
+  transform: translate(-50%, 0);
 }
 
 .voiceAuxControl {
@@ -170,6 +195,13 @@
   position: absolute;
   left: 64.3%;
   top: 17.7%;
+  opacity: 0;
+  transform: translateX(-50%);
+  transition: opacity var(--transition-time) ease-in-out, transform var(--transition-time) ease-in-out;
+}
+
+.modulationContainer.active {
+  transform: translateX(0);
 }
 
 .auxLfoContainer {
@@ -236,4 +268,9 @@
 
 .bypassed {
   opacity: 0.5 !important;
+}
+
+.active {
+  pointer-events: all;
+  opacity: 1;
 }
