--- a/components/LinearKnob/index.module.css
+++ b/components/LinearKnob/index.module.css
@@ -1,6 +1,5 @@
 .knobContainer {
   position: relative;
-  overflow: hidden;
   touch-action: none;
   cursor: grab;
   user-select: none;
@@ -8,4 +7,12 @@
 
 .knobContainer path {
   stroke-linecap: round;
+}
+
+.knobLabel {
+  position: absolute;
+  text-align: center;
+  bottom: -12px;
+  left: 50%;
+  transform: translateX(-50%);
 }
