--- a/components/Effects/index.module.css
+++ b/components/Effects/index.module.css
@@ -32,3 +32,31 @@
 .miniSpacer {
   width: 10px;
 }
+
+.reverbContainer {
+  position: absolute;
+  left: 280px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.reverbControlContainer {
+  height: 3.5px;
+  border-radius: 3.5px;
+  width: 65px;
+  background-color: var(--gray);
+  touch-action: none;
+  cursor: grab;
+  position: relative;
+  pointer-events: all;
+}
+
+.reverbControl {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  background-color: var(--secondary-color);
+  pointer-events: none;
+}
