--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,5 @@
 body {
-  background: #fff;
+  background: #d4dbe1;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 18px;
