--- a/components/Effects/index.module.css
+++ b/components/Effects/index.module.css
@@ -2,11 +2,16 @@
   position: absolute;
   top: 628px;
   left: 67px;
-  transform: scale(0.65);
+  transform: scale(0.65) translateX(100px);
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   gap: 12px;
+  transition: transform var(--transition-time) ease-in-out;
+}
+
+.effectsContainer.active {
+  transform: scale(0.65);
 }
 
 .effectsRow {
