--- a/app/page.module.css
+++ b/app/page.module.css
@@ -100,6 +100,10 @@
   position: relative;
 }
 
+.manbergLink {
+  pointer-events: all;
+}
+
 .copySnackbar {
   position: absolute;
   padding: 8px;
