update reverb slider

--- a/components/Effects/index.module.css
+++ b/components/Effects/index.module.css
@@ -65,3 +65,14 @@
   background-color: var(--secondary-color);
   pointer-events: none;
 }
+
+.reverbControlHandle {
+  position: absolute;
+  top: -3.25px;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: var(--secondary-color);
+  transform: translateX(-50%);
+  pointer-events: none;
+}
